Fixed repo name in travis config file for publishing releases back to github

--- a/.travis.yml
+++ b/.travis.yml
@@ -52,5 +52,5 @@ deploy:
   file:
     - "${RELEASE_FILE}"
   on:
-    repo: taskcluster/slugid-go
+    repo: taskcluster/stateless-dns-go
     tags: true
